src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Academic_Qualifications_MERC__c</fullName>
        <description>To record academic qualifications of speakers 
Created by John A Adams 10/2/2013</description>
        <inlineHelpText>Please indicate your most relevant degrees/certifications: select all that applies. Note that Non-MD Health care professional includes: nurse, pharmacist, psychologist, dietician</inlineHelpText>
        <label>Academic Qualifications</label>
        <picklist>
            <picklistValues>
                <fullName>MD Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD non- specialist or GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-MD Health care professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD non-MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc, BSc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_Add_Reason_MERC__c</fullName>
        <description>Capture reason the account is being added into Mercury, in the case of a Non-HCP. Created 11/22/2013 by KLorenti, Mavens Consulting</description>
        <label>Account Add Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisory_Board_Experience_MERC__c</fullName>
        <description>Stores experience in advisory boards
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>Have you participated in advisory boards?</inlineHelpText>
        <label>Advisory Board Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allocated_CAP_MERC__c</fullName>
        <description>Committed money, but service not yet performed. After meeting owner final fee confirmation, which happens after HCP contract request by Meeting owner and shortly before contract preparation. Cap is released in case of cancellation.
 Created 10/08/2013 by KLorenti.</description>
        <inlineHelpText>Committed money, but service not yet performed. Cap is released in case of cancellation.</inlineHelpText>
        <label>Allocated CAP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Altrnt_Nm_GLBL__c</fullName>
        <description>Alternate Name
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Alternate Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_CAP_Limit_MERC__c</fullName>
        <description>Stores the current years annual cap limit for formula calculations. Oliver Dunford 6th Nov 2013.</description>
        <label>Annual CAP Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_MERC__c</fullName>
        <description>Approval for Non-HCP to attend a Lilly Meeting/ Event
Created by John A Adams 10/21/2013</description>
        <label>Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Need Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associate_or_Full_Professor_MERC__c</fullName>
        <description>Stores experience at a teaching institution.
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>Do you have current or previous experience at a teaching institution as Associate or Full Professor?</inlineHelpText>
        <label>Associate or Full Professor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bnft_Dsgn_Cd_GLBL__c</fullName>
        <description>Created to map to Customer ODS.Party.Benefit Designation Cd.  Created by Oliver Dunford 25th Oct</description>
        <label>Benefit Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bsns_Nm2_GLBL__c</fullName>
        <description>Business Name 2
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Business Name 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bsns_Nm3_GLBL__c</fullName>
        <description>Business Name 3
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Business Name 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Usage_Note_MERC__c</fullName>
        <description>Notes about CAP usage.
Created by John A Adams 10/31/2013</description>
        <label>CAP Usage Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CODS_End_Date_GLBL__c</fullName>
        <description>Contains date that HCP was ended in Customer OCS.  RMAT on watching for this date will adjust Status field.
Created by John A Adams 10/23/2013</description>
        <label>CODS End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CODS_Merge_MERC__c</fullName>
        <description>Track instances whereby HCP&apos;s have been merged within the Customer ODS. This can often be due to error by Cegedim and therefore this flag should have no effect on the HCP record in Mercury. RMAT will monitor these instances via a report and decide whether a Merge is required manually. 
Created by John A Adams 10/23/2013</description>
        <label>CODS Merge</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculate_Open_Meeting_Fees_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the system will update all Fee calculations for Open Meetings.  This deals with the scenario whereby a Fee cannot calculate because a Tier does not exist, or a HCP is re-tiered and only new Meetings should have the new Tier applied. Created by Oliver Dunford 31st Oct 2013.</description>
        <inlineHelpText>Check this box to update all Meeting Participant Fee calculations based on a new or updated HCP Tier.  This will only update those meetings which do not have a Status of Closed or Cancelled.</inlineHelpText>
        <label>Calculate Open Meeting Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cellular_Phone_Cntry_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Cell Phone Country Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_PI_MERC__c</fullName>
        <description>Stores if HCP has acted as a primary investigator for clinical trials
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>Have you acted as the Primary Investigator in a Clinical Trial</inlineHelpText>
        <label>Clinical Trial PI</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 2 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clsfctn_Cd_GLBL__c</fullName>
        <description>Maps to Customer.ODS.Classification field.  Created by Oliver Dunford 25th Oct 2013</description>
        <label>Classification Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clsfctn_Desc_GLBL__c</fullName>
        <description>Classification Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cntrct_Elgblty_Sts_Txt_GLBL__c</fullName>
        <description>Contract Eligible Status
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Contract Eligible Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cntrct_Nm_GLBL__c</fullName>
        <description>Contract Name
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Contract Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cntrct_Shrt_Nm_GLBL__c</fullName>
        <description>Contract Short Name
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Contract Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cntry_Cd_GLBL__c</fullName>
        <description>Party Country Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Party Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Preference_MERC__c</fullName>
        <description>The preferred channel for Mercury communication.  E.g. Email, Mail, Phone.  Collected via the Consent and Preferences object and stamped on the Account profile. Oliver Dunford 9th Jan.</description>
        <label>Communication Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Project_Paid_CAP_MERC__c</fullName>
        <description>Contains all Paid CAP for Consulting Projects.  Oliver Dunford 20th Jan 2014.</description>
        <label>Consulting Project Paid CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date_MERC__c</fullName>
        <description>Displays maximum contract expiration date</description>
        <label>Contract Expiration Date</label>
        <summarizedField>HCP_Contract_MERC__c.Contract_Expiration_Date_MERC__c</summarizedField>
        <summaryFilterItems>
            <field>HCP_Contract_MERC__c.Contract_Request_Status_MERC__c</field>
            <operation>equals</operation>
            <value>Contract signed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>HCP_Contract_MERC__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Master Service Agreement</value>
        </summaryFilterItems>
        <summaryForeignKey>HCP_Contract_MERC__c.Account_MERC__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Limitations_on_Use_MERC__c</fullName>
        <description>Hold information such as topics the Speaker does not want to speak about or reasons not to contract.
Created by John A Adams 10/24/2013</description>
        <inlineHelpText>Used to capture any Contract restrictions.</inlineHelpText>
        <label>Contract Limitations on Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Cntr_Nbr_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Cost Center</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Cntr_Nm_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Cost Center Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_MERC__c</fullName>
        <description>Country Code of Residence pulled from User to be used in the Meeting - Worker Country Code.  Created by John Adams on 12/9/2013</description>
        <formula>TEXT(Country_of_Residence_GLBL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence_GLBL__c</fullName>
        <description>Country of residence which may differ from the Country to be used for contract fee calculation.  Needed for Tax Purposes in Invoice.
Created by John A Adams 10/20/2013</description>
        <label>Country of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crdntl_Cd2_GLBL__c</fullName>
        <description>Secondary Credential Code
Created by John Adams on 11/18/2013</description>
        <label>Credential Code 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crdntl_Cd3_GLBL__c</fullName>
        <description>Credential Code
Created by John Adams on 11/18/2013</description>
        <label>Credential Code 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crdntl_Lvl2_GLBL__c</fullName>
        <description>Second Credential Level
Created by John Adams on 11/18/2013</description>
        <label>Credential Level 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Crdntl_Lvl3_GLBL__c</fullName>
        <description>Credential Level 3
Created by John Adams on 11/18/2013</description>
        <label>Credential Level 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Crdntl_Lvl_GLBL__c</fullName>
        <description>Credential Level
Created by John Adams on 11/18/2013</description>
        <label>Credential Level</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Crdntl_Typ_Cd2_GLBL__c</fullName>
        <description>Credential Type Code
Created by John Adams on 11/18/2013</description>
        <label>Credential Type Code 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crdntl_Typ_Cd3_GLBL__c</fullName>
        <description>Third Credential Type Code
Created by John Adams on 11/18/2013</description>
        <label>Credential Type Code 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crdntl_Typ_Cd_GLBL__c</fullName>
        <description>Credential Type Code
Created by John Adams on 11/18/2013</description>
        <label>Credential Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Code_GLBL__c</fullName>
        <description>Primary Credential Code
Created by John Adams on 11/18/2013</description>
        <label>Credential Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Grp_Cd_GLBL__c</fullName>
        <description>Customer Group Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Customer Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Id_GLBL__c</fullName>
        <description>Created to map to Customer ODS.Party.Customer ID field.   Created by Oliver Dunford 25th Oct.</description>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Typ_Cd_GLBL__c</fullName>
        <description>Customer Type Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Customer Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Typ_Desc_GLBL__c</fullName>
        <description>Customer Type Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decd_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deceased Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Deceased Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Del_Date_GLBL__c</fullName>
        <description>Del_Date_GLBL
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Del_Flg_GLBL__c</fullName>
        <description>Delete Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Delete Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Department Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Department Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dspnsng_Acct_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dispensing Account Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Dispensing Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Efctv_End_Dt_GLBL__c</fullName>
        <description>End Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Efctv_Start_Dt_GLBL__c</fullName>
        <description>Effective Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs2_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Phone2 Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone2 Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs2_Extnsn_Cd_GLBL__c</fullName>
        <description>Phone2 Extension Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 2 Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs2_Txt_GLBL__c</fullName>
        <description>Phone2 Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Phone1 Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone1 Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Elc_Txt_GLBL__c</fullName>
        <description>Email Electronic Address
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Extnsn_Cd_GLBL__c</fullName>
        <description>Phone1 Extension Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 1 Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Cntry_Prfx_Cd_GLBL__c</fullName>
        <description>Fax Country Prefix Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Fax Country Prefix Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Extnsn_Cd_GLBL__c</fullName>
        <description>Fax Extension Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Fax Number Ext</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Fax_Txt_GLBL__c</fullName>
        <description>Fax Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Fax Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Txt_GLBL__c</fullName>
        <description>Phone1 Electronic Address Text
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Phone Number 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elctrnc_Adrs_Web_Txt_GLBL__c</fullName>
        <description>Web Electronic Address 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Web Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employed_by_Government_Institution_GLBL__c</fullName>
        <description>Employed by Government Institution
Created by John A Adams 10/22/2013</description>
        <label>Employed by Government Institution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exec_Smmry_Note_MERC__c</fullName>
        <description>Date stamps important information captured for the HCP. This should be date stamped for each post and passed via integration to Veeva.
Created by John A Adams 12/18/2013</description>
        <label>Executive Summary Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FMV_Criteria_Map_MERC__c</fullName>
        <description>Returns the equivalent mapping based on the Tier of the HCP and their Academic Qualifications.  This is then mapped to the FMV table for the Country of the HCP to return the Maximum and Minimum hourly rates for the HCP.  This logic is picked up by Apex to map to the FMV Custom Settings table. Case Statement not support for multi-select picklist. Oliver Dunford 10th Feb 2014.</description>
        <formula>IF ( INCLUDES ( Academic_Qualifications_MERC__c , &quot;MD Specialist&quot; ), 
	&quot;T&quot; &amp; TEXT(Service_Provider_Tier_MERC__c) &amp; &quot; Specialist&quot;, 
		IF ( INCLUDES ( Academic_Qualifications_MERC__c , &quot;MD non- specialist or GP&quot;), 
			&quot;T&quot; &amp; TEXT(Service_Provider_Tier_MERC__c) &amp; &quot; GP&quot;, 
				IF ( INCLUDES ( Academic_Qualifications_MERC__c , &quot;PhD non-MD&quot; ), 
					&quot;T&quot; &amp; TEXT(Service_Provider_Tier_MERC__c) &amp; &quot; PhD&quot;, 
						IF ( INCLUDES ( Academic_Qualifications_MERC__c , &quot;Non-MD Health care professional&quot; ), 
							&quot;T&quot; &amp; TEXT(Service_Provider_Tier_MERC__c) &amp; &quot; Non-MD&quot;, 
								IF ( INCLUDES ( Academic_Qualifications_MERC__c , &quot;MSc, BSc&quot; ), 
									&quot;T&quot; &amp; TEXT(Service_Provider_Tier_MERC__c) &amp; &quot; Non-MD&quot;
										, NULL) 
						)
				)
		)		
)</formula>
        <label>FMV Criteria Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMV_Tier_Exists_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a HCP has been Tiered.  If this is the case their Service Provider Tier will be set to 1, 2 or 3.  Passed via interface to Veeva  Oliver Dunford 17th Feb 2014.</description>
        <label>FMV Tier Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Phone_Cntry_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Fax Phone Country Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formulary_Id_GLBL__c</fullName>
        <description>Formulary Id
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Formulary Id</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frmr_Nm_GLBL__c</fullName>
        <description>Former Name
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Former Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Nm_GLBL__c</fullName>
        <description>Account Full Name, populated by master data. Oliver Dunford 12th Dec 2013</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gndr_Cd_GLBL__c</fullName>
        <description>Gender Code 
Created by John A Adams 11/4/2013</description>
        <label>Gender Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gndr_Desc_GLBL__c</fullName>
        <description>Gender Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Level_GLBL__c</fullName>
        <description>Governance Level
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Governance Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Govt_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Government Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Government Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Contract_MERC__c</fullName>
        <description>If there is an active contract and the contract signed, field displays Yes, otherwise No.</description>
        <formula>IF (Contract_Expiration_Date_MERC__c &gt;= Today(),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HCP has a signed contract that is not passed the Contract Expiration Date</inlineHelpText>
        <label>Has Active Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_MSA_Contract_MERC__c</fullName>
        <description>Displays whether or not the Account has an active MSA Contract. Created 02/13/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF (MSA_Contract_Expiration_MERC__c &lt; Today() || ISBLANK(MSA_Contract_Expiration_MERC__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has MSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Leadership_Role_MERC__c</fullName>
        <description>Stores experience in a hospital leadership role
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>Have you held a leadership role at a hospital (e.g., Dept Head or Chief of Staff)?</inlineHelpText>
        <label>Hospital Leadership Role</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ims_Prscrbr_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ims Prescriber Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Ims Prescriber Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ims_Xponent_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ims Xponent Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Ims Xponent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indstry_Grp_Cd_GLBL__c</fullName>
        <description>Industry Group Code
Created by John A Adams 11/4/2013</description>
        <label>Industry Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initials_GLBL__c</fullName>
        <description>Initials
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Initials</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_Tiering_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kicks off the process to calculate HCP Tier. Oliver Dunford 10th Jan 2014.</description>
        <label>Initiate Tiering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution_Administrator_GLBL__c</fullName>
        <description>Name of the Government Institution Administrator
Created by John A Adams 10/22/2013</description>
        <label>Institution Administrator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_Assistant_Clinical_Prof_MERC__c</fullName>
        <description>Stores experience as Instructor / Assistant Clinical Professor / Clinical Professor / Assistant Professor</description>
        <inlineHelpText>Do you have current or previous experience at a teaching institution as an:  Instructor / Assistant Clinical Professor / Clinical Professor / Assistant Professor?</inlineHelpText>
        <label>Instructor/Assistant/Clinical Professor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>